objects/agf__PPM_Project__c.object
<CustomObject>
    <fields>
        <fullName>agf__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Tech Debt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Delivery_Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>ProjectsDTL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Development_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects_User2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Path_to_Green__c</fullName>
        <label>Path to Green</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>agf__PPM_Portfolio__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Product_Owner_Project_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>agf__PPM_Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Project_Health__c</fullName>
        <description>Current health of the Project. Project Health Color field will change automatically when this field is changed.</description>
        <inlineHelpText>Current health of the Project. Project Health Color field will change automatically when this field is changed.</inlineHelpText>
        <label>Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <color>#9999FF</color>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                    <color>#6600CC</color>
                    <label>Discovery</label>
                </value>
                <value>
                    <fullName>Information Needed</fullName>
                    <color>#6666CC</color>
                    <label>Information Needed</label>
                </value>
                <value>
                    <fullName>Ready for Acceptance</fullName>
                    <color>#EFAE73</color>
                    <label>Ready for Acceptance</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#DDDDDD</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Watch</fullName>
                    <color>#F3D904</color>
                    <label>Watch</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                    <color>#CC0000</color>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>On Track</fullName>
                    <color>#419249</color>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#996633</color>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#3366FF</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <color>#660000</color>
                    <label>Duplicate</label>
                </value>
                <value>
                    <fullName>Canceled - Deferred / Deprioritized</fullName>
                    <color>#333333</color>
                    <label>Canceled - Deferred / Deprioritized</label>
                </value>
                <value>
                    <fullName>Canceled - Handled as a ticket</fullName>
                    <color>#000000</color>
                    <label>Canceled - Handled as a ticket</label>
                </value>
                <value>
                    <fullName>Canceled - No Longer Needed</fullName>
                    <color>#666666</color>
                    <label>Canceled - No Longer Needed</label>
                </value>
                <value>
                    <fullName>Carry-Over</fullName>
                    <color>#B6E32E</color>
                    <label>Carry-Over</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <color>#000000</color>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Never</fullName>
                    <color>#000000</color>
                    <label>Never</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Project_Management_Notes_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>TPM notes as of this date</description>
        <inlineHelpText>TPM notes as of this date</inlineHelpText>
        <label>Project Management Notes Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Project_Management_Notes__c</fullName>
        <inlineHelpText>field for TPM&apos;s/Project management to notate next steps, upcoming work, top of mind things, whatever they need, don&apos;t forget the date!</inlineHelpText>
        <label>Project Management Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Project Manager responsible for the Project.</description>
        <inlineHelpText>Select the Project Manager&apos;s name from the Lookup list.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Slippage_Comment__c</fullName>
        <description>TPM insights/comments on date slippage</description>
        <inlineHelpText>TPM insights/comments on date slippage</inlineHelpText>
        <label>Slippage Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Slippage_Reason__c</fullName>
        <label>Slippage Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Scope Change</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>